[project]
name = "py-litestar"
version = "0.1.0"
description = "hit's experiment on InformationContentSecurity"
authors = [
  { name = "pthumeruihyll", email = "104620864+pthumeruihyll@users.noreply.github.com" },
]
dependencies = [
  "litestar>=2.16.0",
  "niquests>=3.14.1",
  "selectolax>=0.3.30"
]
requires-python = ">=3.13"
license = { text = "MIT" }

[tool.pdm]
distribution = true
