[project]
name = "py-litestar"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "pthumeruihyll", email = "104620864+pthumeruihyll@users.noreply.github.com" },
]
dependencies = [
    "litestar>=2.16.0",
    "niquests>=3.14.1",
    "selectolax>=0.3.30",
    "hypercorn>=0.17.3",
    "edgy[sqlite]>=0.32.1",
]
requires-python = "==3.13.*"
license = { text = "MIT" }
readme = "README.md"

[tool.pdm]
distribution = false
