[project]
name = "hit-expt-infosec-py-litestar"
version = "0.1.0"
description = "The python implement for"
authors = [
  { name = "pthumeruihyll", email = "104620864+pthumeruihyll@users.noreply.github.com" },
]
dependencies = [
    "hypercorn>=0.17.3",
    "litestar[standard]>=2.16.0",
    "niquests>=3.14.1",
    "selectolax>=0.3.30",
]
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"

[tool.pdm]
distribution = false
